feat: Add Openshift routing as traffic manager
