# controller/controller.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/argoproj/argo-rollouts/utils/queue"
 
+	openshiftclientset "github.com/openshift/client-go/route/clientset/versioned"
 	"github.com/pkg/errors"
 	smiclientset "github.com/servicemeshinterface/smi-sdk-go/pkg/gen/client/split/clientset/versioned"
 	log "github.com/sirupsen/logrus"
@@ -98,6 +99,7 @@ func NewManager(
 	argoprojclientset clientset.Interface,
 	dynamicclientset dynamic.Interface,
 	smiclientset smiclientset.Interface,
+	openshiftclientset openshiftclientset.Interface,
 	discoveryClient discovery.DiscoveryInterface,
 	replicaSetInformer appsinformers.ReplicaSetInformer,
 	servicesInformer coreinformers.ServiceInformer,
@@ -149,6 +151,7 @@ func NewManager(
 		DynamicClientSet:                dynamicclientset,
 		RefResolver:                     refResolver,
 		SmiClientSet:                    smiclientset,
+		OpenshiftClientSet:              openshiftclientset,
 		ExperimentInformer:              experimentsInformer,
 		AnalysisRunInformer:             analysisRunInformer,
 		AnalysisTemplateInformer:        analysisTemplateInformer,
