# pkg/apiclient/rollout/rollout.swagger.json
@@ -867,6 +867,19 @@
       },
       "title": "ObjectRef holds a references to the Kubernetes object"
     },
+    "github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.OpenshiftTrafficRouting": {
+      "type": "object",
+      "properties": {
+        "routes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "Openshift route definition"
+        }
+      },
+      "title": "OpenshiftTrafficRouting defines the configuration required to use Openshift routes for traffic"
+    },
     "github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.PauseCondition": {
       "type": "object",
       "properties": {
@@ -1306,6 +1319,10 @@
         "ambassador": {
           "$ref": "#/definitions/github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.AmbassadorTrafficRouting",
           "title": "Ambassador holds specific configuration to use Ambassador to route traffic"
+        },
+        "openshift": {
+          "$ref": "#/definitions/github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.OpenshiftTrafficRouting",
+          "title": "Openshift holds specific configuration to use routes for traffic"
         }
       },
       "title": "RolloutTrafficRouting hosts all the different configuration for supported service meshes to enable more fine-grained traffic routing"
